--- a/public/syllabus/index.html
+++ b/public/syllabus/index.html
@@ -247,9 +247,20 @@ table tbody tr:nth-child(odd){
 <li>Communicate statistical analyses to a general audience.</li>
 </ul>
 <h2 id="course-community">Course community</h2>
-<h3 id="duke-community-standard">Duke Community Standard</h3>
-<p>As a student in this course, you have agreed to uphold the <a href="https://studentaffairs.duke.edu/conduct/about-us/duke-community-standard">Duke Community Standard</a> as well as the practices specific to this course.</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_KN97j30ST4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3 id="duke-compact--community-standard">Duke Compact &amp; Community Standard</h3>
+<p><strong>The Duke Compact</strong></p>
+<p>The Duke Compact recognizes our shared responsibility for our collective health and well- being. Please be reminded that by signing your name to this pledge, you have acknowledged that you understand the conditions for being on campus. These include complying with university, state, and local requirements and acting to protect yourself and those around you. For complete language and updated policies, please visit <a href="https://returnto.duke.edu/compact/">returnto.duke.edu/compact/</a>.</p>
+<p><strong>Duke Community Standard</strong></p>
+<p>All students, whether residing on campus or learning remotely, must adhere to the <a href="https://trinity.duke.edu/undergraduate/academic-policies/community-standard-student-conduct">Duke Community Standard (DCS)</a>: Duke University is a community dedicated to scholarship, leadership, and service and to the principles of honesty, fairness, and accountability. Citizens of this community commit to reflect upon these principles in all academic and non- academic endeavors, and to protect and promote a culture of integrity.
+To uphold the Duke Community Standard:</p>
+<p>Students affirm their commitment to uphold the values of the Duke University community by signing a pledge that states:</p>
+<blockquote>
+<p>I will not lie, cheat, or steal in my academic endeavors;
+I will conduct myself honorably in all my endeavors;
+I will act if the Standard is compromised</p>
+</blockquote>
+<p>Regardless of course delivery format, it is the responsibility of all students to understand and follow Duke policies regarding academic integrity, including doing one&rsquo;s own work, following proper citation of sources, and adhering to guidance around group work
+projects. Ignoring these requirements is a violation of the Duke Community Standard. If you have any questions about how to follow these requirements, please contact <a href="mailto:jeanna.mccullers@duke.edu">Jeanna McCullers</a>, Director of the Office of Student Conduct.</p>
 <h3 id="inclusive-community">Inclusive community</h3>
 <p>It is my intent that students from all diverse backgrounds and perspectives be well-served by this course, that students&rsquo; learning needs be addressed both in and out of class, and that the diversity that the students bring to this class be viewed as a resource, strength and benefit. It is my intent to present materials and activities that are respectful of diversity and in alignment with <a href="https://provost.duke.edu/initiatives/commitment-to-diversity-and-inclusion">Duke’s Commitment to Diversity and Inclusion</a>. Your suggestions are encouraged and appreciated. Please let me know ways to improve the effectiveness of the course for you personally, or for other students or student groups.</p>
 <p>Furthermore, I would like to create a learning environment for my students that supports a diversity of thoughts, perspectives and experiences, and honors your identities. To help accomplish this:</p>
@@ -258,9 +269,9 @@ table tbody tr:nth-child(odd){
 <li>I (like many people) am still in the process of learning about diverse perspectives and identities. If something was said in class (by anyone) that made you feel uncomfortable, please talk to me about it.</li>
 </ul>
 <h3 id="accessibility">Accessibility</h3>
-<p>If there is any portion of the course that is not accessible to you due to challenges with technology or the course format, please let me know so we can make accommodations.</p>
 <p>In addition to accessibility issues experienced during the typical academic year, I recognize that remote learning may present additional challenges. Students may be experiencing unreliable wi-fi, lack of access to quiet study spaces, varied time-zones, or additional responsibilities while studying at home. If you are experiencing these or other difficulties, please contact me to discuss possible accommodations.</p>
-<p>The <a href="https://access.duke.edu/students">Student Disability Access Office (SDAO)</a> is available to ensure that students are able to engage with their courses and related assignments. Students should be in touch with the Student Disability Access Office to <a href="https://access.duke.edu/requests">request or update accommodations</a> under these circumstances.</p>
+<p><strong>Academic accommodations</strong></p>
+<p>The <a href="https://access.duke.edu/students">Student Disability Access Office (SDAO)</a> will continue to be available to ensure that students are able to engage with their courses and related assignments. Students should be in touch with the Student Disability Access Office to <a href="https://access.duke.edu/requests">request or update</a> accommodations under these circumstances. Zoom has the ability to provide live closed captioning. If you are not seeing this, and but would like to see this feature, please reach out to your instructor for assistance.</p>
 <h3 id="academic-honesty">Academic honesty</h3>
 <p><strong>TL;DR: Don&rsquo;t cheat!</strong></p>
 <p>Please abide by the following as you work on assignments in this course:</p>
@@ -467,11 +478,11 @@ table tbody tr:nth-child(odd){
 <p>If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, please email Professor Tackett before the deadline, to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. This waiver may only be used once, so only use it for a truly extenuating circumstance.</p>
 <p>If there are circumstnaces that are having a longer-term impact on your academic performance, please notify your academic dean.</p>
 <h3 id="regrade-requests">Regrade Requests</h3>
-<p>Regrade requests should be submitted through the regrade request from on Gradescope. <strong>Requests for a regrade must be made within a week of when the assignment is returned; requests submitted later will not be considered.</strong> You should only submit a regrade request if there is an error in the grade calculation or a correct answer was mistakenly marked as incorrect. You should not submit a regrade to dispute the number of points deducted for an incorrect response. <em>Please note that by submitting a regrade request, your entire assignment may be regraded and you may potentially lose points.</em></p>
-<p>Due to the time consuming nature of responding to regrade requests, you should attend office hours and ask a member of the teaching team about the feedback before submitting the request. When you submit a request, please indicate which member of the teaching team you spoke with. <em>Note: Grades can only be changed by Professor Tackett. Teaching Assistants cannot change grades on returned assignments.</em></p>
-<p><strong>No grades will be changed after the final project presentations.</strong></p>
+<p>Regrade requests must be submitted on Gradescope within a week of when an assignment is returned. Regrade requests will be considered if there was an error in the grade calculation or if you feel a correct answer was mistakenly marked as incorrect. Requests to dispute the number of points deducted for an incorrect response will not be considered. Note that by submitting a regrade request, the entire question may be regraded and you may potentially lose points.</p>
+<p>No grades will be changed after the final project presentations.</p>
 <h2 id="additional-resources">Additional resources</h2>
 <h3 id="academic-resource-center">Academic Resource Center</h3>
+<p>.</p>
 <p>There are times may need help with the class that is beyond what can be provided by the teaching team. In those instances, I encourage you to visit the Academic Resource Center. The <a href="https://arc.duke.edu">Academic Resource Center (ARC)</a> offers free services to all students during their undergraduate careers at Duke.  Services include Learning Consultations, Peer Tutoring and Study Groups, ADHD/LD Coaching, Outreach Workshops, and more. Because learning is a process unique to every individual, they work with each student to discover and develop their own academic strategy for success at Duke. Contact the ARC to schedule an appointment. Undergraduates in any year, studying any discipline can benefit! Contact <a href="mailto:arc@duke.edu" title="email"><a href="mailto:ARC@duke.edu">ARC@duke.edu</a></a>, 919-684-5917.</p>
 <h3 id="caps">CAPS</h3>
 <p><a href="https://studentaffairs.duke.edu/caps">Duke Counseling &amp; Pyschological Services (CAPS)</a> helps Duke Students enhance strengths and develop abilities to successfully live, grow and learn in their personal and academic lives. CAPS recognizes that we are living in unprecedented times and that the changes, challenges and stressors brought on by the COVID-19 pandemic have impacted everyone, often in ways that are tax our well-being. CAPS offers many services to Duke undergraduate students, including brief individual and group counseling, couples counseling and more. CAPS staff also provides outreach to student groups, particularly programs supportive of at-risk populations, on a wide range of issues impacting them in various aspects of campus life. CAPS provides services to students via Telehealth. To initiate services, you can contact their front desk at 919-660-1000.</p>
